tests/calico_testcases/example_policies/testcase6/testcase6-superDeny.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase6-superDeny
  namespace: kube-system
spec:
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: all()
  egress:
  - action: Deny
    destination:
      selector: has(tier)
  - action: Allow
    destination:
      selector: app in {'vpn', 'keepalived-watcher'}
